--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3362,6 +3362,7 @@
 		.wrapper.style3 {
 			background-color: #f7f7f7;
 			color: #999999;
+			padding:1em;
 		}
 
 			.wrapper.style3 input[type="submit"],
